[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[lib]
# Disables all warnings for the entire library
warnings = "deny"

[dependencies]
actix-web = "4"
serde = { version = "1.0.130", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
cargo-watch = "8.5.3"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde_json = "1.0.132"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 